--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.0.4
+django-cors-headers==3.2.1
+django-filter==2.2.0
 django-rest-swagger==2.2.0
 django-templated-mail==1.1.1
 djangorestframework==3.11.0
+djangorestframework-jwt==1.11.0
 djoser==2.0.3
 gunicorn==20.0.4
 idna==2.9
@@ -19,6 +22,7 @@ PyJWT==1.7.1
 pytz==2019.3
 requests==2.23.0
 simplejson==3.17.0
+six==1.14.0
 sqlparse==0.3.1
 uritemplate==3.0.1
 urllib3==1.25.8
