--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,4 @@ sqlparse==0.3.1
 uritemplate==3.0.1
 urllib3==1.25.8
 Pillow==7.1.2
+_480p  = Representation(Size(854, 480), Bitrate(750 * 1024, 192 * 1024))
