--- a/requirements.txt
+++ b/requirements.txt
@@ -27,4 +27,8 @@ sqlparse==0.3.1
 uritemplate==3.0.1
 urllib3==1.25.8
 Pillow==7.1.2
+# install ffmpeg on server
 python-ffmpeg-video-streaming>=0.1
+celery==4.4.2
+# install redis-server on server
+redis==3.5.2
