--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ coreschema==0.0.4
 Django==3.0.4
 django-cors-headers==3.2.1
 django-filter==2.2.0
-django-rest-swagger==2.2.0
 django-templated-mail==1.1.1
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
@@ -28,7 +27,9 @@ uritemplate==3.0.1
 urllib3==1.25.8
 Pillow==7.1.2
 # install ffmpeg on server
-python-ffmpeg-video-streaming>=0.1
+python-ffmpeg-video-streaming==0.1.5
 celery==4.4.2
 # install redis-server on server
 redis==3.5.2
+wagtail==2.9
+drf-yasg==1.17.1
