--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ sqlparse==0.3.1
 uritemplate==3.0.1
 urllib3==1.25.8
 Pillow==7.1.2
+geographiclib==1.52
+geopy==2.2.0
 # install ffmpeg on server
 python-ffmpeg-video-streaming==0.1.5
 celery==4.4.2
